2001-08-01  Mike Fleming  <mfleming@eazel.com>

	Added gnome-vfs authentication dialog support.
	Currently works with HTTP basic and proxy authentication.

	A bug causes the dialog to appear more than once in quick succession
	in some cases.

	Separate processes (eg sidebar components) that need to access
	a protected URL will also pop open their own individual dialogs
	at this point 

	There's also no integration with Mozilla at this point, so
	Mozilla too will prompt separately.

	This code works against gnome-vfs head and the gnome-vfs-1-0
	branch, as well as the soon-to-be-released gnome-vfs 1.0.2

	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-authn-manager.c:
	(construct_password_dialog), (present_authn_dialog_blocking),
	(mark_callback_completed), (authn_dialog_button_clicked),
	(authn_dialog_closed), (authn_dialog_destroyed),
	(present_authn_dialog_nonblocking),
	(run_authn_dialog_on_main_thread), (vfs_authn_callback),
	(nautilus_authn_manager_initialize):
	* libnautilus-private/nautilus-authn-manager.h:
	* src/nautilus-application.c: (finish_startup):

2001-08-01  Darin Adler  <darin@bentspoon.com>

	* THANKS: More people to thank.

2001-07-31  Yanko Kaneti  <yaneti@declera.com>

	* components/help/topleveldocs.xml: remove the extra bg_BG(.cp1251)
	references, part of the gnome cvs wide move from bg_BG to bg

2001-07-27  Darin Adler  <darin@bentspoon.com>

	Fixed bug 8438 (changing desktop between $HOME and .gnome-desktop
	breaks desktop DnD from other apps).

	* src/file-manager/fm-desktop-icon-view.c:
	(desktop_directory_changed_callback): New function to update the
	local variable when the desktop directory changes.
	(fm_desktop_icon_view_initialize): Set up the callback rather than
	just setting up the global variable.

	* configure.in: Fixed code to set up compile-time options. It
	was putting the options into VFS_CFLAGS.

2001-07-25  Maciej Stachowiak  <mjs@noisehavoc.org>
