@@ -1,3 +1,9 @@
+2001-08-02  Maciej Stachowiak  <mjs@noisehavoc.org>
+
+	* libnautilus/nautilus-view-standard-main.c:
+	(nautilus_view_standard_main_multi): Get display name in a better
+	way suggested by Havoc Pennington.
+
 2001-08-01  Mike Fleming  <mfleming@eazel.com>
 
 	Added gnome-vfs authentication dialog support.
